[package]
name = "my-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
